// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Atlas-Bridge IV can't plan around first-wave ghost colony anymore. Each pass of First-wave ghost colony costs Atlas-Bridge V a margin it doesn't have. Industrial mirror swarm failure is corroding Atlas-Bridge VII. Atlas-Bridge V carries Atlas-Bridge V Gate 06 on its surface. Atlas-Bridge IV hosts Atlas-Bridge IV Claim 18.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "First-wave ghost colony took shape before the collapse, First-wave ghost colony is rewriting the constants Atlas-Bridge IV was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Glasshouse Biosafety Compact and Veyra-Locke Concession both want ecology. Glasshouse Biosafety Compact refuses to recognize Ninth Ledger Office's authority. The compact between Pale Choir Communion and Red Vane Labor Combine has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Glasshouse Biosafety Compact and Veyra-Locke Concession broke in the bleed years, Glasshouse Biosafety Compact and Veyra-Locke Concession can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-frontier-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Brothers of Choir refuses to recognize Carrion Wake's authority. Brothers of Choir disputes Pale Saint Pact's claim. Brothers of Choir and Vow-Breaker Wake both want religion.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Brothers of Choir and Carrion Wake broke before the collapse, Brothers of Choir and Carrion Wake can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-astronomy: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Each pass of Black-market route beacon lattice costs Tau Reticuli Observatory a margin it doesn't have. Each pass of Public festival tied to safe transit windows costs Suhail-37 Belt VI a margin it doesn't have. Black-market route beacon lattice keeps shifting under Suhail-37 Belt VI. Suhail-37 Belt VI Hold is the only major foothold on Suhail-37 Belt VI.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Black-market route beacon lattice took shape in the great compaction, Black-market route beacon lattice is rewriting the constants Tau Reticuli Observatory was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-balanced: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Metric mirage zone keeps shifting under Wouri Survey-176 IV. Each pass of Metric mirage zone costs Wouri Survey-176 V a margin it doesn't have. Wouri Survey-176 III can't plan around metric mirage zone anymore. Wouri Survey-176 V Charter sits on Wouri Survey-176 V. Wouri Survey-176 IV hosts Wouri Survey-176 Station.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Metric mirage zone took shape before the collapse, Metric mirage zone is rewriting the constants Wouri Survey-176 IV was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > baseline-realistic-cinematic: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Each pass of Captured rogue world costs Tarandus Route-211 IV a margin it doesn't have. And in turn, The compact between Iron Crown Cabal and Salt Wound Cabal has gone bad. Meanwhile, Captured rogue world keeps shifting under Tarandus Route-211 Belt V. Tarandus Route-211 Belt V hosts Dead relay buoy. Tarandus Route-211 IV carries Tarandus Route-211 IV Laboratory on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Captured rogue world took shape in the early charters, Captured rogue world is rewriting the constants Tarandus Route-211 IV was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-frontier-cinematic-fracture-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Bone Lantern Wake refuses to recognize Sisters of Synod's authority. Last Ledger Cabal disputes Long Knife Run's claim. The compact between Long Knife Run and Widow Star Synod has gone bad. Pipit's Delta VI - Moon I Base draws everything it consumes from Illegal Sol-prohibited geometry sample. Pipit's Delta VII Station 30 depends on Illegal Sol-prohibited geometry sample for everything.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Bone Lantern Wake and Sisters of Synod broke in the long quiet, Bone Lantern Wake and Sisters of Synod can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > corner-realistic-astronomy-low-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Narrow-AI perception fog keeps shifting under Guniibuu-Apdu Minor VII. Each pass of Election-day metric storm cycle costs Guniibuu-Apdu Minor VII a margin it doesn't have. Each pass of Election-day metric storm cycle costs Watch-Order Working Group a margin it doesn't have. Guniibuu-Apdu Minor VII carries Guniibuu-Apdu Minor VII - Moon I Hub on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Narrow-AI perception fog took shape in the great compaction, Narrow-AI perception fog is rewriting the constants Guniibuu-Apdu Minor VII was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-crowded: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Each pass of Debt-fleet anchor graveyard costs Yuyu's Field Belt IX a margin it doesn't have. Each pass of Election-day metric storm cycle costs Yuyu's Field V a margin it doesn't have. Yuyu's Field VIII can't plan around debt-fleet anchor graveyard anymore. Yuyu's Field VIII carries Yuyu's Field Node on its surface.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Debt-fleet anchor graveyard took shape in the great compaction, Debt-fleet anchor graveyard is rewriting the constants Yuyu's Field Belt IX was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-hub: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Intan's Crown Belt X can't plan around metric mirage zone anymore. Intan's Crown V can't plan around metric mirage zone anymore. Refugee ark parking orbit is corroding Intan's Crown Belt X. Intan's Crown V - Moon I Claim is the only major foothold on Intan's Crown V.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Metric mirage zone took shape before the quarantine, Metric mirage zone is rewriting the constants Intan's Crown Belt X was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Each pass of Long-period comet storm costs Vey Picket-265 I a margin it doesn't have. Chiral contamination bloom keeps shifting under Vey Picket-265 Belt IV. Chiral contamination bloom is corroding Vey Picket-265 Belt III. Vey Picket-265 Belt IV Platform sits on Vey Picket-265 Belt IV. Vey Picket-265 Belt III hosts Vey Picket-265 Belt III Array.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "body",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Long-period comet storm took shape in the second wave, Long-period comet storm is rewriting the constants Vey Picket-265 I was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > density-sparse: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Each pass of Chiral contamination bloom costs Long Baseline Authority a margin it doesn't have. Arneb Trace-209 III can't plan around refugee ark parking orbit anymore. Each pass of Chiral contamination bloom costs Arneb Trace-209 III a margin it doesn't have. Arneb Trace-209 III hosts Arneb Trace-209 III Station 85.",
  "spineEdgeType": "DESTABILIZES",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "phenomenon",
  "spineSummary": "Chiral contamination bloom took shape in the bleed years, Chiral contamination bloom is rewriting the constants Long Baseline Authority was built around.",
  "spineVisibility": "public",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-fracture: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact refuses to recognize Red Vane Labor Combine's authority. Orison Route Authority disputes Red Vane Labor Combine's claim. The compact between Orison Route Authority and Veyra-Locke Concession has gone bad.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Red Vane Labor Combine broke in the second wave, Kestrel Free Compact and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-high: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact disputes Red Vane Labor Combine's claim. The compact between Glasshouse Biosafety Compact and Veyra-Locke Concession has gone bad. Orison Route Authority refuses to recognize Red Vane Labor Combine's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Red Vane Labor Combine broke in the iggygate dawn, Kestrel Free Compact and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-low: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact and Red Vane Labor Combine both want trade. Glasshouse Biosafety Compact and Ninth Ledger Office both want governance. Ash Meridian Navy refuses to recognize Glasshouse Biosafety Compact's authority.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Red Vane Labor Combine broke in the pinchdrive era, Kestrel Free Compact and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;

exports[`spine full axis matrix (16 representative cells) > gu-axis-normal: stable spine + body[0] structural fields 1`] = `
{
  "body0": "Kestrel Free Compact refuses to recognize Red Vane Labor Combine's authority. The compact between Glasshouse Biosafety Compact and Veyra-Locke Concession has gone bad. Orison Route Authority and Red Vane Labor Combine both want trade.",
  "spineEdgeType": "CONTESTS",
  "spineObjectKind": "namedFaction",
  "spineSubjectKind": "namedFaction",
  "spineSummary": "The compact between Kestrel Free Compact and Red Vane Labor Combine broke in the bleed years, Kestrel Free Compact and Red Vane Labor Combine can't both set the rules — and the rest of the system knows it.",
  "spineVisibility": "contested",
}
`;
